@@ -114,6 +114,10 @@ Release date: TBA
 
   Closes #3839
 
+* Fix false-positive ``used-before-assignment`` with an assignment expression in a ``Return`` node
+
+  Closes #4828
+
 
 What's New in Pylint 2.9.6?
 ===========================
